feature: add paragraph for error handling.

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
         <input class="task-form__input" type="text" name="task-title" id="task-title" placeholder="Task Title" required>
         <button type="submit" class="btn btn--primary">Add Task</button>
       </form>
+      <p id="formError" class="task-form__error" aria-live="polite"></p>
+
       <ul id="taskList" class="task-list" aria-live="polite"></ul>
     </section>
   </main>
