fix: add missing script import

--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
   <footer class="page__footer">
     <small>Manage with purpose</small>
   </footer>
+
+  <script type="module" src="src/main.js"></script>
 </body>
 
 </html>
